force-app/main/default/objects/Water_Footprint__c/Water_Footprint__c.object-meta.xml
<CustomObject>
    <label>Water Footprint</label>
    <nameField>
        <label>Water Footprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Water Footprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>