force-app/main/default/objects/Water_Footprint__c/fields/Prior_Year_Annual_Water_Impact__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Annual_Water_Impact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Year Annual Water Impact</label>
    <referenceTo>Water_Footprint__c</referenceTo>
    <relationshipName>Water_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>