force-app/main/default/objects/Water_Footprint__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Confirmation</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Interpolation</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Water Stress Evaluation</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>External Audit</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>