force-app/main/default/objects/Water_Footprint__c/fields/Total_Change_in_Water_Storage_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Change_in_Water_Storage_ML__c</fullName>
    <label>Total Change in Water Storage (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>