force-app/main/default/objects/Water_Footprint__c/fields/Total_Groundwater_Withdrawal_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Groundwater_Withdrawal_ML__c</fullName>
    <label>Total Groundwater Withdrawal (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>