force-app/main/default/objects/Water_Footprint__c/fields/Total_number_of_fines__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_fines__c</fullName>
    <label>Total number of fines</label>
    <summaryForeignKey>Water_Compliance_Report_Item__c.Water_Footprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>