force-app/main/default/objects/Water_Footprint__c/fields/Total_Produced_Water_Withdrawal_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Produced_Water_Withdrawal_ML__c</fullName>
    <label>Total Produced Water Withdrawal (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>