force-app/main/default/objects/Water_Footprint__c/fields/Total_value_of_fines__c.field-meta.xml
<CustomField>
    <fullName>Total_value_of_fines__c</fullName>
    <label>Total value of fines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>