force-app/main/default/objects/Water_Footprint__c/fields/Total_Water_Consumption_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Consumption_ML__c</fullName>
    <formula>Total_Water_Withdrawal_ML__c - Total_Water_Discharge_ML__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Water Consumption (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>