force-app/main/default/objects/Water_Footprint__c/fields/Total_Water_Discharge_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Discharge_ML__c</fullName>
    <label>Total Water Discharge (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>