force-app/main/default/objects/Water_Footprint__c/fields/Total_Water_Withdrawal_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Withdrawal_ML__c</fullName>
    <formula>Total_Surface_Water_Withdrawal_ML__c +
Total_Groundwater_Withdrawal_ML__c +
Total_Seawater_Withdrawal_ML__c +
Total_Produced_Water_Withdrawal_ML__c +
Total_Third_party_Water_Withdrawal_ML__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Water Withdrawal (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>